--- a/project1.html
+++ b/project1.html
@@ -8,7 +8,7 @@
     
     <main class="main-content">
         <section class="left-section">
-            <div class="left-content">
+            <div class="left-content"></div>
                 <div class="profile-details">
                     <div class="profile">
                         <img src="nitesh.jpg-removebg-preview.png" width="120">
