--- a/project1.html
+++ b/project1.html
@@ -27,9 +27,9 @@
                         <li class="icon">twitter</li>
                     </div>
                     <div class="personal-details">
-                    <li class="icon">nksingh.niteshsingh@gmail.com</li>
-                    <li class="icon">07071746067</li>
-                    <li class="icon">Ballia U.P</li>
+                    <li class="icon">abc.xyz@gmail.com</li>
+                    <li class="icon">070000000</li>
+                    <li class="icon">India</li>
                     </div>
                     <br>
                 </div>
